# cmd/api/main.go
@@ -7,21 +7,21 @@ import (
 	"fmt"
 	"os"
 
-	_ "github.com/sudo-Tiz/dns-tester-go/internal/api/docs" // swagger docs
-	"github.com/sudo-Tiz/dns-tester-go/internal/cli"
+	_ "github.com/sudo-tiz/dns-tester-go/internal/api/docs" // swagger docs
+	"github.com/sudo-tiz/dns-tester-go/internal/cli"
 )
 
-// @title dns-tester-go API
+// @title DNS-Tester-GO API
 // @version 1.0.0
 // @description Asynchronous DNS testing with support for Do53, DoT, DoH, DoQ protocols
 // @description This API allows you to submit DNS queries and retrieve results asynchronously
 //
-// @contact.name dns-tester-go
-// @contact.url https://github.com/sudo-Tiz/dns-tester-go
+// @contact.name DNS-Tester-GO
+// @contact.url https://github.com/sudo-Tiz/DNS-Tester-GO
 // @contact.email contact@example.com
 //
 // @license.name MIT
-// @license.url https://github.com/sudo-Tiz/dns-tester-go/blob/main/LICENSE
+// @license.url https://github.com/sudo-Tiz/DNS-Tester-GO/blob/main/LICENSE
 //
 // @host localhost:5000
 // @BasePath /
