# internal/cli/server.go
@@ -9,8 +9,8 @@ import (
 	"time"
 
 	"github.com/spf13/cobra"
-	"github.com/sudo-Tiz/dns-tester-go/internal/app"
-	"github.com/sudo-Tiz/dns-tester-go/internal/config"
+	"github.com/sudo-tiz/dns-tester-go/internal/app"
+	"github.com/sudo-tiz/dns-tester-go/internal/config"
 )
 
 const (
